--- a/client/src/Component/Home/Home.css
+++ b/client/src/Component/Home/Home.css
@@ -43,6 +43,21 @@
 	margin-top: 1.5%;
 }
 
+/* Hero Section */
+.heroSection {
+	display: flex;
+	position: relative;
+	background-color: yellow;
+	width: 100%;
+	height: 66vh;
+}
+
+.heroImage {
+	display: flex;
+	position: absolute;
+	margin-left: 450px;
+}
+
 /* Header Dining Section */
 .headerImage{
 	margin: 0;
