--- a/client/src/Component/Navbar/Navbar.css
+++ b/client/src/Component/Navbar/Navbar.css
@@ -11,7 +11,7 @@
     width: 100%;
     color: #B31312;
     box-shadow: 0 2px 10px 0 rgba(0, 0, 0, 0.7);
-    height: 8rem;
+    height: 9rem;
     /* background-color: #EEE2DE; */
     /* border-radius: 5px;
     height: 6rem; */
@@ -50,19 +50,26 @@
 
 .navContainer {
     /* background-color: white; */
-    margin-left: -25%;
+    margin-left: -5%;
+    margin-top: 1.5%;
+    position: fixed;
     /* border: solid white; */
     /* background-image: linear-gradient(rgba(0,0,0,0.7),rgba(0,0,0,0.1)); */
 }
 
 .logo-img{
+    position: relative;
+    display: inline-block;
     background-repeat: no-repeat;
     background-size: contain;
     background-position: center center;
     background-image: url("../../images/logo/HUNGRYLOGO.webp");
-    width: 250px;
-    height: 75px;
+    width: 110px;
+    height: 90px;
     cursor: pointer;
+    margin: 0;
+    padding: 0;
+    /* background-color: #B31312; */
 }
 
 .navLinks {
@@ -78,14 +85,50 @@
     cursor: pointer;
     letter-spacing: 2px;
     margin: 0 15px 0 15px;
-    font-size: 0.9rem;
+    
+    width: 100px;
+    /* background-color: black; */
+    display: flex;
+    align-items: center;
+    justify-content: center;
     /* padding-top: 4%; */
 }
 .navLinks li:hover {
     position: relative;
-    scale: 1.2;
-    transition: 0.05s ease-in-out;
+    transition: 0.1s ease-in-out;
     border-bottom: 2px solid white;
-    padding-bottom: 10px;
+    /* padding-bottom: 5px; */
+}
+
+.navItemContainer {
+    align-items: center;
+    justify-content: center;
+    color: white;
+    text-decoration: none;
+}
+
+.navItemLogo {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    scale: 1.5;
+    padding: 5px;
+    margin-bottom: 10px;
+}
+
+.navItemText {
+    font-size: 0.75rem;
+}
+
+.cartNumber {
+    margin-left: 40px;
+    margin-top: -10px;
+    padding: 5px;
+    text-align: center;
+    position: absolute;
+    background-color: rgba(0, 0, 0, 0.2);
+    border-radius: 100%;
+    width: 30px;
+    height: 30px;
 }
 
