--- a/client/src/Component/Home/Home.css
+++ b/client/src/Component/Home/Home.css
@@ -133,7 +133,7 @@
 .headImageHeading {
 	position: absolute;
 	margin-top: -5%;
-	color: black;
+	color: #EEE2DE;
 	text-decoration: 1.5px underline #EEE2DE ;
 	padding: 10px;
 	font-size: 1.5rem;
@@ -145,6 +145,42 @@
 }
 
 /* --------------------------- */
+
+/* Cards Item */
+
+.social-link {
+	width: 30px;
+	height: 30px;
+	border: 1px solid #ddd;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	color: #666;
+	border-radius: 50%;
+	transition: all 0.3s;
+	font-size: 0.9rem;
+  }
+  
+  .social-link:hover,
+  .social-link:focus {
+	background: #ddd;
+	text-decoration: none;
+	color: #555;
+  }
+  
+  .progress {
+	height: 10px;
+  }
+
+  .foodItems {
+	margin-top: 2%;
+  }
+
+  .carouselImage {
+	width: 100px;
+	height: 100px;
+  }
+/* ---------------------------- */
 
 .heroText {
 	position: absolute;
