--- a/client/src/Component/Home/Home.css
+++ b/client/src/Component/Home/Home.css
@@ -30,13 +30,11 @@
 	background-image: linear-gradient(rgba(0,0,0,0.2),rgba(0,0,0,0.5)), url("../../images/headerImage/header-nav.jpeg");
 }
 
-.bg-img1 {
-	background-image: url("https://images.pexels.com/photos/1624487/pexels-photo-1624487.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1");
-}
-
-
-.bg-img2 {
-	background-image: url("../../images/foodTypeCarousel/pizzaCarouselImage.jpeg");
+.bg-img-back {
+	width: 100%;
+	height: 88vh;
+	z-index: -1;
+	background-color: rgba(0,0,0,0.5);
 }
 
 .carouselItemFoodList {
