--- a/client/src/Component/Navbar/Navbar.css
+++ b/client/src/Component/Navbar/Navbar.css
@@ -40,7 +40,7 @@
 .navContainer {
     /* background-color: white; */
     margin-left: -5%;
-    margin-top: 1.5%;
+    /* margin-top: 0; */
     position: fixed;
 }
 
@@ -120,84 +120,4 @@
     height: 20px;
 }
 
-/* Cart Toggle Flexbox */
 
-.cartFlexBox {
-    float:right; 
-    width: 50%;
-    height: inherit; 
-    position: relative; 
-    display: flex;
-    color: white;  
-}
-
-.cartFlexBoxHead {
-    background-color: white;
-    width: 100%;
-    height: 4rem;
-    color: black;
-    box-shadow: 0 8px 4px rgba(0, 0, 0, 0.7);
-}
-
-.totalAmount {
-    text-align: left;
-    align-items: center;
-    letter-spacing: 2px;
-    margin-top: 3%;
-    /* background-color: red; */
-    font-size: 1.5rem;
-    font-weight: 700;
-}
-
-.cartItemsListContainer {
-    display: flex;
-    position: relative;
-    margin: 0;
-    padding: 0;
-}
-
-.itemsList {
-    height: 200rem;
-    overflow-y: scroll;
-}
-.itemsList::-webkit-scrollbar {
-    display: none;
-}
-
-/* Cart Item */
-.cartItemContainer {
-    height:12rem; 
-    background-color:rgba(255,255,255,0.5); 
-    width: auto;
-    margin:2rem;
-    border-radius:10px;
-    border: 0 0 0 5px solid rgba(0,0,0,0.7);
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-}
-
-.cartItemImage {
-    width: 80%; 
-    height: 80%;
-    align-content: center; 
-    justify-content: center;
-    border-radius: 5px; 
-    margin-top: 1rem; 
-    box-shadow: 4px 8px 8px rgba(0,0,0,0.6);
-}
-.cartItemImage:hover {
-    transition: all 0.2s ease-in;
-    scale: 1.02;
-}
-
-.cartItemButton {
-    width:2rem; 
-    height:2rem; 
-    padding:0 2px; 
-    background-color:black; 
-    color:white;  
-    border-radius:5px;
-}
-.cartItemButton:hover{
-    transition: all 0.5s ease-in-out;
-    scale: 1.05;
-}
